--- a/header-footer-grid/assets/scss/frontend/layout/_footer.scss
+++ b/header-footer-grid/assets/scss/frontend/layout/_footer.scss
@@ -106,9 +106,6 @@
 
 .footer-main, .footer-top, .footer-bottom {
   .builder-item {
-    &:last-child {
-      margin-bottom: 0;
-    }
     .widget-area {
       .widget {
         &:last-child {
