--- a/header-footer-grid/assets/scss/frontend/layout/_main.scss
+++ b/header-footer-grid/assets/scss/frontend/layout/_main.scss
@@ -8,6 +8,10 @@
   }
 }
 
+.builder-item {
+  margin: 8px 0;
+}
+
 //<editor-fold desc="Row Layout">
 $builder_types: header footer;
 
